--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>kafka/kafka-model</module>
         <module>kafka/kafka-producer</module>
         <module>twitter-to-kafka-service</module>
+      <module>config-server</module>
     </modules>
     <properties>
         <java.version>11</java.version>
@@ -36,6 +37,8 @@
         <apache.version>4.5.14</apache.version>
         <jsonx.version>20220924</jsonx.version>
         <spring-webflux.version>3.0.4</spring-webflux.version>
+        <spring-cloud.version>2.2.6.RELEASE</spring-cloud.version>
+        <spring-cloud-dependencies.version>Hoxton.SR9</spring-cloud-dependencies.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -148,6 +151,19 @@
                         <artifactId>swagger-core</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-config-server</artifactId>
+                <version>${spring-cloud.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud-dependencies.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
 
         </dependencies>
