--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>kafka/kafka-producer</module>
         <module>twitter-to-kafka-service</module>
       <module>config-server</module>
+        <module>kafka/kafka-consumer</module>
     </modules>
     <properties>
         <java.version>11</java.version>
