--- a/kafka/kafka-consumer/pom.xml
+++ b/kafka/kafka-consumer/pom.xml
@@ -25,6 +25,10 @@
             <groupId>org.apache.avro</groupId>
             <artifactId>avro</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
