--- a/kafka-to-elastic-service/pom.xml
+++ b/kafka-to-elastic-service/pom.xml
@@ -12,6 +12,7 @@
   <artifactId>kafka-to-elastic-service</artifactId>
 
   <dependencies>
+    <!--    LOCAL    -->
     <dependency>
       <groupId>com.gino.microservices</groupId>
       <artifactId>kafka-consumer</artifactId>
@@ -24,6 +25,19 @@
       <groupId>com.gino.microservices</groupId>
       <artifactId>kafka-model</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.gino.microservices</groupId>
+      <artifactId>elastic-model</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.gino.microservices</groupId>
+      <artifactId>elastic-config</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.gino.microservices</groupId>
+      <artifactId>elastic-index-client</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
