--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <module>config-server</module>
     <module>kafka/kafka-consumer</module>
     <module>kafka-to-elastic-service</module>
+      <module>elastic</module>
   </modules>
   <properties>
     <java.version>11</java.version>
@@ -42,6 +43,7 @@
     <spring-webflux.version>3.0.4</spring-webflux.version>
     <spring-cloud.version>2.2.6.RELEASE</spring-cloud.version>
     <spring-cloud-dependencies.version>Hoxton.SR9</spring-cloud-dependencies.version>
+    <elastic.version>7.9.1</elastic.version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -75,6 +77,21 @@
         <groupId>com.gino.microservices</groupId>
         <artifactId>kafka-consumer</artifactId>
         <version>0.0.1-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>com.gino.microservices</groupId>
+        <artifactId>elastic-model</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.gino.microservices</groupId>
+        <artifactId>elastic-config</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.gino.microservices</groupId>
+        <artifactId>elastic-index-client</artifactId>
+        <version>${project.version}</version>
       </dependency>
 
       <dependency>
@@ -182,6 +199,23 @@
         <version>${spring-cloud-dependencies.version}</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        <version>${spring-boot.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.elasticsearch</groupId>
+        <artifactId>elasticsearch</artifactId>
+        <version>${elastic.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.elasticsearch.client</groupId>
+        <artifactId>elasticsearch-rest-high-level-client</artifactId>
+        <version>${elastic.version}</version>
       </dependency>
 
     </dependencies>
