--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
     <module>kafka/kafka-consumer</module>
     <module>kafka-to-elastic-service</module>
       <module>elastic</module>
+    <module>elastic/elastic-query-client</module>
+    <module>common-util</module>
   </modules>
   <properties>
     <java.version>11</java.version>
@@ -91,6 +93,11 @@
       <dependency>
         <groupId>com.gino.microservices</groupId>
         <artifactId>elastic-index-client</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.gino.microservices</groupId>
+        <artifactId>common-util</artifactId>
         <version>${project.version}</version>
       </dependency>
 
