--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
       <module>elastic</module>
     <module>elastic/elastic-query-client</module>
     <module>common-util</module>
+    <module>elastic-query-service</module>
   </modules>
   <properties>
     <java.version>11</java.version>
@@ -93,6 +94,11 @@
       <dependency>
         <groupId>com.gino.microservices</groupId>
         <artifactId>elastic-index-client</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.gino.microservices</groupId>
+        <artifactId>elastic-query-client</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
