--- a/reactive-elastic-query-service/pom.xml
+++ b/reactive-elastic-query-service/pom.xml
@@ -9,34 +9,28 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
 
-  <artifactId>elastic-query-service</artifactId>
-
-  <properties>
-    <maven.compiler.source>11</maven.compiler.source>
-    <maven.compiler.target>11</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+  <artifactId>reactive-elastic-query-service</artifactId>
 
   <dependencies>
+    <dependency>
+      <groupId>com.gino.microservices</groupId>
+      <artifactId>elastic-query-service-common</artifactId>
+    </dependency>
     <dependency>
       <groupId>com.gino.microservices</groupId>
       <artifactId>config-data</artifactId>
     </dependency>
     <dependency>
       <groupId>com.gino.microservices</groupId>
-      <artifactId>elastic-config</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.gino.microservices</groupId>
-      <artifactId>elastic-query-client</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.gino.microservices</groupId>
-      <artifactId>elastic-query-service-common</artifactId>
+      <artifactId>elastic-model</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.cloud</groupId>
@@ -50,14 +44,6 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
     </dependency>
-    <dependency>
-      <groupId>javax.validation</groupId>
-      <artifactId>validation-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-hateoas</artifactId>
-    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -66,7 +52,7 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
           <image>
-            <name>${project.groupId}/elasticqueryservice:${project.version}</name>
+            <name>${project.groupId}/reactiveelasticqueryservice:${project.version}</name>
           </image>
         </configuration>
         <executions>
