--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
     <module>elastic-query-service</module>
     <module>elastic-query-service-common</module>
     <module>reactive-elastic-query-service</module>
+    <module>elastic-query-web-client</module>
   </modules>
   <properties>
     <java.version>11</java.version>
