--- a/docker-compose/keycloak_authorization_server.yml
+++ b/docker-compose/keycloak_authorization_server.yml
@@ -1,17 +1,30 @@
 version: '3.7'
+volumes:
+  postgres_data:
+    driver: local
 services:
+  postgres:
+    image: postgres
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    environment:
+      - "POSTGRES_DB=keycloak"
+      - "POSTGRES_USER=keycloak"
+      - "POSTGRES_PASSWORD=keycloak"
   keycloak-authorization-server:
     image: quay.io/keycloak/keycloak:${KEYCLOAK_VERSION:-latest}
     hostname: keycloak-server
     ports:
-      - "8081:8081"
+      - "8082:8082"
     environment:
       - "KEYCLOAK_USER=admin"
       - "KEYCLOAK_PASSWORD=admin"
-      - "JAVA_OPTS=-Djboss.http.port=8081"
+      - "JAVA_OPTS=-Djboss.http.port=8082"
       - "DB_VENDOR=POSTGRES"
-      - "DB_ADDR=host.docker.internal"
+      - "DB_ADDR=postgres"
       - "DB_DATABASE=keycloak"
       - "DB_USER=keycloak"
       - "DB_PASSWORD=keycloak"
-      - "DB_SCHEMA=keycloak"
+      - "DB_SCHEMA=public"
+    depends_on:
+      - postgres
